--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Muindo N Gituku",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-errors": "^0.3.1"
   }
 }
